rename "virtual" to "controller" [breaks configs]
